<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
  <packaging>war</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Provides access to Camunda Task Events via REST Api for the Adapter</description>

  <parent>
    <groupId>pro.taskana</groupId>
    <artifactId>taskana-adapter-parent</artifactId>
    <version>3.0.1-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <properties>
    <java.version>8</java.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.camunda.spin</groupId>
      <artifactId>camunda-spin-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.camunda.spin</groupId>
      <artifactId>camunda-spin-dataformat-all</artifactId>
    </dependency>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
      <version>${version.jakarta-ws-rs-api}</version>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>${version.mybatis}</version>
    </dependency>
    <dependency>
      <groupId>pro.taskana</groupId>
      <artifactId>taskana-common</artifactId>
      <version>${version.taskana}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${version.maven.compiler}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <showWarnings>true</showWarnings>
          <failOnWarning>true</failOnWarning>
          <compilerArgs>
            <arg>-Xlint:-serial</arg>
            <arg>-proc:none</arg>
            <arg>-Xbootclasspath:${env.JAVA_HOME_8_X64}/jre/lib/rt.jar</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>${version.maven-war-plugin}</version>
        <configuration>
          <attachClasses>true</attachClasses>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
